--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
     <h1>HELLO!</h1>
+    <a href="pages/login.html">login</a>
+    <a href="pages/register.html">register</a>
 </body>
 </html>
