--- a/index.html
+++ b/index.html
@@ -1,12 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="styles/index.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Cookerino!</title>
 </head>
+
 <body>
-    <h1>HELLO!</h1>
-    <a href="pages/login.html">login</a>
-    <a href="pages/register.html">register</a>
+<header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <p class="navbar-brand" >Cookerino!</p>
+            <div class="collapse navbar-collapse"
+                 id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active"
+                           href="#"
+                           onclick="window.location.reload()">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link"
+                           href="#">Categories</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link"
+                           href="#">Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled"
+                           aria-disabled="true">Favourites</a>
+                    </li>
+                </ul>
+                <div class="d-grid gap-2 d-md-block">
+                    <button class="btn btn-outline-success"
+                            type="button"
+                            onclick="goLogin()">Sign in</button>
+                    <button class="btn btn-outline-success"
+                            type="button"
+                            onclick="goRegister()">Sign up</button>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+</header>
+<div class="recipe_list_container">
+    <div class="recipe_container">
+        <div class="recipe_container_box">
+            <p>Recipe image</p>
+        </div>
+        <div class="recipe_container_box">
+            <p>Recipe name</p>
+        </div>
+        <div class="recipe_container_box">
+            <p>Recipe difficulty</p>
+        </div>
+    </div>
+</div>
+
+
+<script>
+
+    function multiplyNode(node, count, deep) {
+        for (var i = 0, copy; i < count - 1; i++) {
+            copy = node.cloneNode(deep);
+            node.parentNode.insertBefore(copy, node);
+        }
+    }
+    multiplyNode(document.querySelector('.recipe_container'), 12, true);
+    function goLogin() {
+        window.location.href = "pages/login.html";
+    }
+
+    function goRegister() {
+        window.location.href = "pages/register.html";
+    }
+</script>
 </body>
 </html>
