--- a/pages/login.html
+++ b/pages/login.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../styles/login.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>Login...</title>
 </head>
 <body>
@@ -21,7 +23,7 @@
 
         <div class="login_label_combo">
                 <button type="button" onclick="history.back()">Cancel</button>
-            <div class="login_buttons">
+            <div>
                 <button type="button" onclick="register()">Sign up</button>
                 <button type="button" onclick="login()">Sign in</button>
             </div>
