--- a/pages/login.html
+++ b/pages/login.html
@@ -3,39 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../styles/login.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>Login...</title>
 </head>
 <body>
     <div class="login_container">
-        <h1>Login</h1>
-
-        <div class="login_label_combo">
-            <text>Email:</text>
-            <label for="email"></label><input type="email" id="email" name="Email">
+        <div class="login_container_box">
+            <h1>Login</h1>
         </div>
-
-        <div class="login_label_combo">
-            <text>Password:</text>
-            <label for="password"></label><input type="password" id="password" name="Password">
+        <div class="login_container_box login_container_box2">
+            <label for="email">E-mail:</label>
+            <input type="email"
+                   id="email"
+                   name="Email">
         </div>
-
-        <div class="login_label_combo">
-                <button type="button" onclick="history.back()">Cancel</button>
+        <div class="login_container_box login_container_box2">
+            <label for="password">Password:</label>
+            <input type="password"
+                   id="password"
+                   name="Email">
+        </div>
+        <div class="login_container_box login_container_box3">
             <div>
-                <button type="button" onclick="register()">Sign up</button>
+                <button type="button" onclick="history.back()">Cancel</button>
+            </div>
+            <div>
                 <button type="button" onclick="login()">Sign in</button>
+                <button type="button" onclick="register()">Sign up</button>
             </div>
         </div>
     </div>
 <script>
     function login() {
         // Do login operations
-        history.back()
+        window.location.href = '../index.html';
     }
     function register() {
-        window.location.href = 'register.html'
+        window.location.href = 'register.html';
     }
 </script>
 </body>
