--- a/pages/register.html
+++ b/pages/register.html
@@ -2,53 +2,58 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../styles/login.css">
     <link rel="stylesheet" href="../styles/register.css">
     <title>Register...</title>
 </head>
 <body>
-<div class="register_container">
-    <h1>Register</h1>
-
-    <div class="register_label_combo">
-        <text>Name:</text>
-        <label for="name"></label><input type="email" id="name" name="Email">
+<div class="login_container">
+    <div class="login_container_box">
+        <h1>Register</h1>
     </div>
-
-    <div class="register_label_combo">
-        <text>Surname:</text>
-        <label for="surname"></label><input type="email" id="surname" name="Email">
+    <div class="login_container_box login_container_box2">
+        <label for="name">Name:</label>
+        <input type="text"
+               id="name"
+               name="Name">
+        <label for="surname">Surname:</label>
+        <input type="text"
+               id="surname"
+               name="Surname">
     </div>
-
-    <div class="register_label_combo">
-        <text>Gender:</text>
-        <label for="gender"></label><select name="gender" id="gender">
-            <option value="">Select gender</option>
-            <option value="Male">Male</option>
-            <option value="Female">Female</option>
-            <option value="Other">Other</option>
-        </select>
+    <div class="login_container_box login_container_box2">
+            <label for="gender">Gender:</label><select name="gender" id="gender">
+                <option value="">Select gender</option>
+                <option value="Male">Male</option>
+                <option value="Female">Female</option>
+                <option value="Other">Other</option>
+            </select>
     </div>
-
-    <div class="register_label_combo">
-        <text>Email:</text>
-        <label for="email"></label><input type="email" id="email" name="Email">
+    <div class="login_container_box login_container_box2">
+        <label for="email">E-mail:</label>
+        <input type="email"
+               id="email"
+               name="Email">
     </div>
-
-    <div class="register_label_combo">
-        <text>Password:</text>
-        <label for="password"></label><input type="password" id="password" name="Password">
+    <div class="login_container_box login_container_box2">
+        <label for="password">Password:</label>
+        <input type="password"
+               id="password"
+               name="Email">
     </div>
-
-    <div class="register_buttons">
-        <button type="button" onclick="history.back()">Cancel</button>
-        <button type="button" onclick="register()">Sign up</button>
+    <div class="login_container_box login_container_box3">
+        <div>
+            <button type="button" onclick="history.back()">Cancel</button>
+        </div>
+        <div>
+            <button type="button" onclick="register()">Sign up</button>
+        </div>
     </div>
-
 </div>
 <script>
     function register() {
         // Do register operations
-        window.location.href = 'recipe_list.html'
+        window.location.href = '../index.html'
     }
 </script>
 </body>
