Move scripts from html files into separate file

--- a/pages/login.html
+++ b/pages/login.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
     <link rel="stylesheet" href="../styles/login.css">
+    <script src="../scripts/login.js"></script>
+
     <title>Login...</title>
 </head>
 <body>
@@ -28,18 +31,9 @@
             </div>
             <div>
                 <button type="button" onclick="login()">Sign in</button>
-                <button type="button" onclick="register()">Sign up</button>
+                <button type="button" onclick="goRegister()">Sign up</button>
             </div>
         </div>
     </div>
-<script>
-    function login() {
-        // Do login operations
-        window.location.href = '../index.html';
-    }
-    function register() {
-        window.location.href = 'register.html';
-    }
-</script>
 </body>
 </html>
