--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <link rel="stylesheet" href="styles/index.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="scripts/login.js"></script>
 
 <head>
     <meta charset="UTF-8">
+
     <title>Cookerino!</title>
 </head>
 
 <body>
-<header>
+    <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <p class="navbar-brand" >Cookerino!</p>
@@ -46,39 +48,30 @@
                 </div>
             </div>
         </nav>
-</header>
-<div class="recipe_list_container">
-    <div class="recipe_container">
-        <div class="recipe_container_box">
-            <p>Recipe image</p>
-        </div>
-        <div class="recipe_container_box">
-            <p>Recipe name</p>
-        </div>
-        <div class="recipe_container_box">
-            <p>Recipe difficulty</p>
+    </header>
+    <div class="recipe_list_container">
+        <div class="recipe_container">
+            <div class="recipe_container_box">
+                <p>Recipe image</p>
+            </div>
+            <div class="recipe_container_box">
+                <p>Recipe name</p>
+            </div>
+            <div class="recipe_container_box">
+                <p>Recipe difficulty</p>
+            </div>
         </div>
     </div>
-</div>
 
-
-<script>
-    //Function borrowed from StackOverflow
-    function multiplyNode(node, count, deep) {
-        for (var i = 0, copy; i < count - 1; i++) {
-            copy = node.cloneNode(deep);
-            node.parentNode.insertBefore(copy, node);
+    <script>
+        //Function borrowed from StackOverflow
+        function multiplyNode(node, count, deep) {
+            for (var i = 0, copy; i < count - 1; i++) {
+                copy = node.cloneNode(deep);
+                node.parentNode.insertBefore(copy, node);
+            }
         }
-    }
-    multiplyNode(document.querySelector('.recipe_container'), 12, true);
-
-    function goLogin() {
-        window.location.href = "pages/login.html";
-    }
-
-    function goRegister() {
-        window.location.href = "pages/register.html";
-    }
-</script>
+        multiplyNode(document.querySelector('.recipe_container'), 12, true);
+    </script>
 </body>
 </html>
