Adding categories layout

--- a/pages/login.html
+++ b/pages/login.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
 
-    <link rel="stylesheet" href="../styles/login.css">
-    <script src="../scripts/login.js"></script>
+    <link rel="stylesheet" href="/styles/sites.css">
+    <link rel="stylesheet" href="/styles/login.css">
+    <script src="/scripts/login.js"></script>
 
     <title>Login...</title>
 </head>
@@ -31,7 +32,7 @@
             </div>
             <div>
                 <button type="button" onclick="login()">Sign in</button>
-                <button type="button" onclick="goRegister()">Sign up</button>
+                <button type="button" onclick="window.location.href = 'register.html'">Sign up</button>
             </div>
         </div>
     </div>
