--- a/pages/register.html
+++ b/pages/register.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
 
-    <link rel="stylesheet" href="../styles/login.css">
-    <link rel="stylesheet" href="../styles/register.css">
-    <script src="../scripts/login.js"></script>
+    <link rel="stylesheet" href="/styles/sites.css">
+    <link rel="stylesheet" href="/styles/login.css">
+    <link rel="stylesheet" href="/styles/register.css">
+    <script src="/scripts/login.js"></script>
 
     <title>Register...</title>
 </head>
